Slide de python listo

--- a/public/css/estilos.styl
+++ b/public/css/estilos.styl
@@ -44,3 +44,21 @@ body
 		position relative
 		top 1em
 		color blue
+
+.parrafo
+	font-size 1.2em
+
+.why
+	float right
+	font-size 3em
+
+.logoDjangoPython
+	width 30%
+	text-aling center
+	position relative
+	left 30%
+	img
+		width 100%
+.bigTitle
+	margin-left 2em
+	text-transform uppercase
